# backend/docs/swagger.json
@@ -2614,6 +2614,12 @@
                         "description": "入口Endpoint",
                         "name": "entryEndpoint",
                         "in": "query"
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "是否跳过无故障传播链的记录",
+                        "name": "ignoreEmptyPropationsInstance",
+                        "in": "query"
                     }
                 ],
                 "responses": {
